# ui-framework

./: CMakeLists.txt  Dynamic Text Plan.drawio  Untitled Diagram.drawio
src/: main.cpp  main_t.cpp  main_testing.cpp
src/ui/: alignment.cpp  alignment.h  button.cpp  button.h  element.h  frame.cpp  frame.h  layout.cpp  layout.h  outline.h  textbox.cpp  textbox.h  ui.h
src/ui/elements/: button.cpp  button.h  element.h  image.cpp  image.h  textbox.cpp  textbox.h
